--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/maca.new.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="MaCa карти. Решения за нерешителните!" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
